--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
