--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-burger",
   "version": "0.1.0",
-  "homepage": "https://margo-yunanova.github.io/react-burger/",
+  "homepage": "https://margo-yunanova.github.io/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
